oxiplate-derive/tests/broken/extends/extends-non-existent-inline.stderr
error: Path does not exist: `$DIR/templates/extends-non-existent.html.oxip`
 --> tests/broken/extends/extends-non-existent-inline.rs:4:33
  |
4 | #[oxiplate_inline(r#"{% extends "extends-non-existent.html.oxip" %}"#)]
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
